4B/cs444/tests/site/pass/pass_constructoroverloading.joos
/* pass: constructor overloading */
public class A {
  public A() {}
  public A(int x) {}
}

