4B/cs444/tests/site/fail/fail_volatile.joos
/* fail: volatile */
  public class A {
    public volatile int x;
  }

